[package]
authors = ["Frederick Gnodtke <frederick@gnodtke.net>"]
build = "build.rs"
name = "libsamplerate-sys"
description = "FFI bindings for libsamplerate"
repository = "https://github.com/Prior99/libsamplerate-sys"
keywords = ["libsamplerate", "c", "ffi", "audio", "samplerate"]
license = "BSD-2-Clause"
version = "0.1.8"
readme = "README.md"
categories = ["multimedia::audio"]

exclude = [
    ".*",
    "libsamplerate/appveyor.yml",
    "libsamplerate/autogen.sh",
    "libsamplerate/configure.ac",
    "libsamplerate/Make.bat",
    "libsamplerate/Makefile.am",
    "libsamplerate/libsamplerate.spec.in",
    "libsamplerate/doc/",
    "libsamplerate/Octave/",
    "libsamplerate/examples/",
    "libsamplerate/m4/",
    "libsamplerate/tests/",
]

[dev-dependencies]
all_asserts = "2.2.0"

[build-dependencies]
cmake = "0.1"
